tests/test68.rael.exp
Error [1:15]: Expected key
| routine(:123, 2323) {
|               ^
